@@ -47,8 +47,8 @@ public:
   Solarus::QuestProperties get_selected_quest_properties() const;
   Solarus::QuestProperties get_quest_properties(int index) const;
 
-  const QPixmap &get_selected_logo() const;
-  const QPixmap &get_quest_logo(int index) const;
+  const QPixmap& get_selected_logo() const;
+  const QPixmap& get_quest_logo(int index) const;
 
   int get_selected_index() const;
   QString get_selected_path() const;
